add Jasmine test suite

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
   <head>
+    <script type="text/javascript" src="jasmine/src/Vertex.js"></script>
     <title>Go through WebSocket</title>
     <style media="screen">
       /** { margin:0; padding:0; } /* to remove the top and left whitespace */*/
