--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta charset="utf-8">
   <head>
     <script type="text/javascript" src="jasmine/src/Vertex.js"></script>
+    <script type="text/javascript" src="jasmine/src/ComponentMap.js"></script>
     <title>Go through WebSocket</title>
     <style media="screen">
       /** { margin:0; padding:0; } /* to remove the top and left whitespace */*/
