--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -13,10 +13,12 @@
 
   <!-- include source files here... -->
   <script src="src/Vertex.js"></script>
+  <script src="src/ComponentMap.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/VertexSpec.js"></script>
+  <script src="spec/ComponentMapSpec.js"></script>
 
 </head>
 
