--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -14,12 +14,14 @@
   <!-- include source files here... -->
   <script src="src/Vertex.js"></script>
   <script src="src/ComponentMap.js"></script>
+  <script src="src/Pair.js"></script>
   <script src="src/Set.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/VertexSpec.js"></script>
   <script src="spec/ComponentMapSpec.js"></script>
+  <script src="spec/PairSpec.js"></script>
   <script src="spec/SetSpec.js"></script>
 
 </head>
