--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -16,6 +16,7 @@
   <script src="src/ComponentMap.js"></script>
   <script src="src/Pair.js"></script>
   <script src="src/Set.js"></script>
+  <script src="src/Graph.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
@@ -23,6 +24,7 @@
   <script src="spec/ComponentMapSpec.js"></script>
   <script src="spec/PairSpec.js"></script>
   <script src="spec/SetSpec.js"></script>
+  <script src="spec/GraphSpec.js"></script>
 
 </head>
 
