add Queue#contains method

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <meta charset="utf-8">
   <head>
     <script type="text/javascript" src="jasmine/src/Vertex.js"></script>
+    <script type="text/javascript" src="jasmine/src/Set.js"></script>
+    <script type="text/javascript" src="jasmine/src/Queue.js"></script>
     <script type="text/javascript" src="jasmine/src/ComponentMap.js"></script>
     <title>Go through WebSocket</title>
     <style media="screen">
