--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
   <head>
+    <script type="text/javascript" src="jasmine/src/Pair.js"></script>
+    <script type="text/javascript" src="jasmine/src/Graph.js"></script>
     <script type="text/javascript" src="jasmine/src/Vertex.js"></script>
     <script type="text/javascript" src="jasmine/src/Set.js"></script>
     <script type="text/javascript" src="jasmine/src/Queue.js"></script>
