--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <tr>
           <td>White score: </td>
           <td>
-            <span id="blackScore">0</span>
+            <span id="whiteScore">0</span>
           </td>
         </tr>
       </table>
