--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
   <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="jasmine/src/Pair.js"></script>
     <script type="text/javascript" src="jasmine/src/Graph.js"></script>
     <script type="text/javascript" src="jasmine/src/Vertex.js"></script>
@@ -15,6 +16,34 @@
     </style>
   </head>
   <body>
+    <div style="float: right">
+        <label for="board-dimensions">Board dimensions:</label>
+        <select id="board-dimensions">
+            <option value="9">9x9</option>
+            <option value="13">13x13</option>
+            <option value="19">19x19</option>
+        </select>
+
+        <label for="board-size">Board size:</label>
+        <select id="board-size">
+            <option value="200">200x200</option>
+            <option value="400" selected>400x400</option>
+            <option value="600">600x600</option>
+        </select>
+    </div>
+
+    <script type="text/javascript">
+    $("#board-dimensions").change(function() {
+        var dimensions = this.value;
+        window.location.search = "?c="+dimensions;
+    });
+
+    $("#board-size").change(function() {
+        var size = this.value;
+        window.location.search += "&w="+size;
+    });
+    </script>
+
     <canvas id="canvas"></canvas>
 
     <div id="scores">
@@ -41,5 +70,14 @@
     </div>
 
     <script type="text/javascript" src="go_game.js" charset="utf-8"></script>
+
+    <!-- websocket communication -->
+    <script type="text/javascript" charset="utf-8">
+    var ws = new WebSocket("ws://localhost:8080");
+
+    ws.onmessage = function(event) {
+        console.log(event.data);
+    };
+    </script>
   </body>
 </html>
